Intermediate checkin to allow Dain to sync his work.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/configid@380190 13f79535-47bb-0310-9956-ffa450edef68